--- a/NEWS.txt
+++ b/NEWS.txt
@@ -3,7 +3,7 @@ OSG News
 
 = !OpenSceneGraph 3.0 release adds support OpenGL ES 1.1, OpenGL ES 2.0, OpenGL 3.x to 4.0, support for Andoid and IOS platforms and much more.
 
-PERTHSHIRE, Scotland - 17th June 2011 - !OpenSceneGraph Professional Services announces the release of !OpenSceneGraph 3.0, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. !OpenSceneGraph 3.0 written entirely in Standard C++ and built upon OpenGL, offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets - a real-time visualization tool which eclipses commercial scene graph toolkits in functionality, stability and performance. !OpenSceneGraph 3.0 runs on all Microsoft Windows platforms, Apple OS/X, IOS, GNU/Linux, Android, IRIX, Solaris, HP-UX, AIX and FreeBSD operating systems.
+PERTHSHIRE, Scotland - 24th June 2011 - !OpenSceneGraph Professional Services announces the release of !OpenSceneGraph 3.0, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. !OpenSceneGraph 3.0 written entirely in Standard C++ and built upon OpenGL, offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets - a real-time visualization tool which eclipses commercial scene graph toolkits in functionality, stability and performance. !OpenSceneGraph 3.0 runs on all Microsoft Windows platforms, Apple OS/X, IOS, GNU/Linux, Android, IRIX, Solaris, HP-UX, AIX and FreeBSD operating systems.
 
 === Open-source development delivers industry-leading features and performance ===
 The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the lead developers and the open-source community that has grown up around the project. The real-time graphics industry and academia embraced it from the very beginning, deploying it in real-world applications, and actively participating in its development, testing and refinement. The end result is a high-quality library with a feature set relevant to application developers' needs.
@@ -12,16 +12,17 @@ The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the le
 
   * OpenGL ES 1.1, and OpenGL ES 2.0 support
   * OpenGL 3.x and 4.x support along with associated OpenGL extensions
-  * Supoort for Android (versions?)
-  * Support for IOS (versions?)
-  * FBX plugin
-  * osgQt library
+  * Supoort for Android on tablets and phones.
+  * Support for IOS on tablets and phones.
+  * New extensible serializers that provide new .osgb binary, .osgt ascii and .osgx xml file native formats
+  * New generalized serializable metadata architecture
+  * New osgQt library that makes it straight forward to integrate OpenSceneGraph with Qt.
+  * new FBX plugin
   * Support for Cocoa and 64bit OSX build
-  * Volume rendering
-  * User data
-  * Serializers, .osgb binary, .osgt ascii and .osgx xml file native formats
+  * Improvements to osgVolume enabling high quality race traced volume rendering
+  * Improvements to osgManipulator making it more flexible
   * Improved thread safety and efficiency of database paging
-  * Texture and buffer object pools for efficiently managing GL object resources.
+  * New Texture and buffer object pools for efficiently managing GL object resources.
 
 === Downloads and Licensing ===
 !OpenSceneGraph is open-source, so full source code is provided, and can be copied, modified and used free of charge for commercial and non-commercial use. Access to the source allows end users greater flexibility in how they develop, debug and deploy their applications.  They gain productivity and freedom by being able to leverage the tool chain in accordance with their own release cycles. Downloads of binaries and source can be found in the [http://www.openscenegraph.org/projects/osg/wiki/Downloads Downloads] section of the openscenegraph.org website.
