Updated ChangeLog and AUTHORS file for 3.0.0-rc5

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,6 +1,6 @@
 OpenSceneGraph Library 3.0.0
 
-463 Contributors:
+464 Contributors:
 
 Firstname Surname
 -----------------
@@ -362,6 +362,7 @@ Mason Menninger
 Martin von Gargern
 Martin Scheffler
 Martin Lambers
+Martin Innus
 Martin Beck
 Mario Guimaraes
 Marco Sciabica
