--- a/NEWS.txt
+++ b/NEWS.txt
@@ -3,7 +3,7 @@ OSG News
 
 = !OpenSceneGraph 3.0 release adds support OpenGL ES 1.1, OpenGL ES 2.0, OpenGL 3.x to 4.0, support for Andoid and IOS platforms and much more.
 
-PERTHSHIRE, Scotland - 24th June 2011 - !OpenSceneGraph Professional Services announces the release of !OpenSceneGraph 3.0, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. !OpenSceneGraph 3.0 written entirely in Standard C++ and built upon OpenGL, offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets - a real-time visualization tool which eclipses commercial scene graph toolkits in functionality, stability and performance. !OpenSceneGraph 3.0 runs on all Microsoft Windows platforms, Apple OS/X, IOS, GNU/Linux, Android, IRIX, Solaris, HP-UX, AIX and FreeBSD operating systems.
+PERTHSHIRE, Scotland - 27th June 2011 - !OpenSceneGraph Professional Services announces the release of !OpenSceneGraph 3.0, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. !OpenSceneGraph 3.0 written entirely in Standard C++ and built upon OpenGL, offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets - a real-time visualization tool which eclipses commercial scene graph toolkits in functionality, stability and performance. !OpenSceneGraph 3.0 runs on all Microsoft Windows platforms, Apple OS/X, IOS, GNU/Linux, Android, IRIX, Solaris, HP-UX, AIX and FreeBSD operating systems.
 
 === Open-source development delivers industry-leading features and performance ===
 The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the lead developers and the open-source community that has grown up around the project. The real-time graphics industry and academia embraced it from the very beginning, deploying it in real-world applications, and actively participating in its development, testing and refinement. The end result is a high-quality library with a feature set relevant to application developers' needs.
@@ -13,14 +13,14 @@ The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the le
   * OpenGL ES 1.1, and OpenGL ES 2.0 support
   * OpenGL 3.x and 4.x support along with associated OpenGL extensions
   * Supoort for Android on tablets and phones.
-  * Support for IOS on tablets and phones.
+  * Support for IOS on tablets and phones (end users applications have already accepted on the app store).
   * New extensible serializers that provide new .osgb binary, .osgt ascii and .osgx xml file native formats
   * New generalized serializable metadata architecture
   * New osgQt library that makes it straight forward to integrate OpenSceneGraph with Qt.
   * new FBX plugin
-  * Support for Cocoa and 64bit OSX build
   * Improvements to osgVolume enabling high quality race traced volume rendering
   * Improvements to osgManipulator making it more flexible
+  * Support for Cocoa and 64bit OSX build
   * Improved thread safety and efficiency of database paging
   * New Texture and buffer object pools for efficiently managing GL object resources.
 
