Updated NEWS for 3.0.0

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -12,17 +12,17 @@ The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the le
 
   * OpenGL ES 1.1, and OpenGL ES 2.0 support
   * OpenGL 3.x and 4.x support along with associated OpenGL extensions
-  * Supoort for Android on tablets and phones.
-  * Support for IOS on tablets and phones (end users applications have already accepted on the app store).
+  * Supoort for Android on tablets and phones
+  * Support for IOS on tablets and phones (end users applications have already been accepted on the App Store)
   * New extensible serializers that provide new .osgb binary, .osgt ascii and .osgx xml file native formats
   * New generalized serializable metadata architecture
-  * New osgQt library that makes it straight forward to integrate OpenSceneGraph with Qt.
+  * New osgQt library that makes it straight forward to integrate !OpenSceneGraph with Qt
   * new FBX plugin
   * Improvements to osgVolume enabling high quality race traced volume rendering
   * Improvements to osgManipulator making it more flexible
   * Support for Cocoa and 64bit OSX build
   * Improved thread safety and efficiency of database paging
-  * New Texture and buffer object pools for efficiently managing GL object resources.
+  * New Texture and buffer object pools for efficiently managing GL object resources
 
 === Downloads and Licensing ===
 !OpenSceneGraph is open-source, so full source code is provided, and can be copied, modified and used free of charge for commercial and non-commercial use. Access to the source allows end users greater flexibility in how they develop, debug and deploy their applications.  They gain productivity and freedom by being able to leverage the tool chain in accordance with their own release cycles. Downloads of binaries and source can be found in the [http://www.openscenegraph.org/projects/osg/wiki/Downloads Downloads] section of the openscenegraph.org website.
@@ -31,10 +31,10 @@ The !OpenSceneGraph 3.0 release is the culmination of 12 years of work by the le
 
 === !OpenSceneGraph Books now available ===
 
-The new book dedicated to the !OpenSceneGraph 3.0 is now available https://www.packtpub.com/openscenegraph-3-0-beginners-guide/book.
+The new book dedicated to the !OpenSceneGraph 3.0 release is now available https://www.packtpub.com/openscenegraph-3-0-beginners-guide/book.
 
 === Professional support and services ===
-!OpenSceneGraph project is backed up with professional services by [http://www.openscenegraph.com OpenSceneGraph Professional Services], based in Scotland, and [http://www.skew-matrix.com Skew-Matrix] and [http://www.blue-newt.com Blue-Newt Software] both based in the USA, and a range of [wiki:Community/Contractors Contractors] from around the world.  Services available include:
+!OpenSceneGraph project is backed up with professional services by [http://www.openscenegraph.com OpenSceneGraph Professional Services], based in Scotland, and [http://www.skew-matrix.com Skew-Matrix] and [http://www.alphapixel.com AlphaPixel] both based in the USA, and a range of [wiki:Community/Contractors Contractors] from around the world.  Services available include:
 
  * Confidential Professional Support
  * Bespoke development
@@ -44,7 +44,7 @@ The new book dedicated to the !OpenSceneGraph 3.0 is now available https://www.p
 === Community support and contributions ===
 The diverse and growing community of over 5000 developers is centred around the public osg-users mailing list/forum, where members discuss how best to use !OpenSceneGraph, provide mutual support, and coordinate development of new features and bug fixes. Members of this community come from many different countries with backgrounds ranging from some of the world's largest aerospace companies, game companies, and visual simulation specialists to university researchers, students and hobbyists.
 
-The !OpenSceneGraph project owes a great deal to the community for its development and support, in particular we wish to thank the [http://www.openscenegraph.org/projects/osg/wiki/Support/Contributors/ThreePointZero 463 individuals] from around the world that have directly contributed to the development and refinement of the !OpenSceneGraph code base.
+The !OpenSceneGraph project owes a great deal to the community for its development and support, in particular we wish to thank the [http://www.openscenegraph.org/projects/osg/wiki/Support/Contributors/ThreePointZero 464 individuals] from around the world that have directly contributed to the development and refinement of the !OpenSceneGraph code base.
 
 
 
